--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -37,7 +37,6 @@
     top: 10rem;
     right: 1.5rem;
     z-index: 29000;
-    box-shadow: 0 1rem 3rem rgba(black, 0.1);
 
     opacity: 0;
     width: 30rem;
@@ -57,7 +56,7 @@
       right: 2rem;
       border-left: 1.5rem solid transparent;
       border-right: 1.5rem solid transparent;
-      border-bottom: 1.5rem solid whitesmoke;
+      border-bottom: 1.5rem solid darken(whitesmoke, 7%);
     }
   }
 
@@ -66,6 +65,7 @@
   }
 
   &__item {
+    box-shadow: 0 0.5rem 1rem rgba(black, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -76,8 +76,8 @@
     width: 30rem;
     background-image: linear-gradient(
       90deg,
-      whitesmoke 0%,
-      whitesmoke 50%,
+      darken(whitesmoke, 7%) 0%,
+      darken(whitesmoke, 7%) 50%,
       $color-almost-black 50%
     );
     background-size: 200%;
