additional media queries for phones + small text changes.

--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -15,6 +15,10 @@
     padding: 8rem 0;
   }
 
+  @media only screen and (max-width: $bp-small) {
+    padding: 4rem 0;
+  }
+
   & .heading--2 {
     position: relative;
     display: inline-block;
