--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@ $bp-largest: 75em; // 1200px
 $bp-large: 62.5em; // 1000px
 $bp-medium: 50em; // 800px
 $bp-small: 37.5em; // 600px
+$bp-smallest: 28.125em; // 450px
 
 *,
 *::after,
