--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -82,6 +82,9 @@
     );
     background-size: 200%;
     transition: background-position 0.4s;
+    @media only screen and (max-width: $bp-large) {
+      pointer-events: none;
+    }
 
     @media only screen and (max-width: $bp-small) {
       width: 100%;
@@ -152,6 +155,12 @@
 
     @media only screen and (max-width: $bp-small) {
       width: 100%;
+    }
+  }
+
+  &__checkbox:checked ~ &__nav &__item {
+    @media only screen and (max-width: $bp-large) {
+      pointer-events: auto;
     }
   }
 
