--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -8,6 +8,10 @@
   flex-direction: column;
   align-items: center;
 
+  @media only screen and (max-width: $bp-small) {
+    padding: 4rem 0;
+  }
+
   &-container {
     background-color: transparent;
     width: 80%;
@@ -17,6 +21,22 @@
 
     @media only screen and (max-width: $bp-large) {
       flex-direction: column;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      margin-top: 10rem;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        transform: translate(-18rem, 4rem);
+        width: 12rem;
+        height: 0.3rem;
+        background-color: darken(#d6d7e6, 3%);
+      }
     }
 
     &--project-1 {
@@ -93,6 +113,12 @@
         border: none;
       }
 
+      @media only screen and (max-width: $bp-smallest) {
+        width: 100%;
+        height: 100%;
+        padding: 2rem 0;
+      }
+
       & .heading--3 {
         box-shadow: inset 0 -1.2rem 0 rgba(216, 233, 243, 0.2);
         font-size: 2.6rem;
@@ -161,10 +187,18 @@
         @media only screen and (max-width: $bp-large) {
           box-shadow: 8px 8px 0 darken(rgb(216, 233, 243), 4%);
         }
+
+        @media only screen and (max-width: $bp-smallest) {
+          box-shadow: none;
+        }
       }
 
       @media only screen and (max-width: $bp-large) {
         box-shadow: 8px 8px 0 lighten(#8b55ce, 30%);
+      }
+
+      @media only screen and (max-width: $bp-smallest) {
+        box-shadow: none;
       }
 
       &--links {
