--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 
 //page layout/sections
 @import "navigation";
-@import "sidebar";
+@import "navbar";
 @import "header";
 @import "about";
 @import "skills";
