--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,16 +1,20 @@
 .contact {
-  //   background-color: darken($color-background-2, 2%);
-  //   background: linear-gradient(rgb(245, 245, 245), rgb(216, 233, 243));
-  background: linear-gradient(to top, rgb(216, 233, 243), rgb(245, 245, 245));
+
+  background: darken($color-purple-light, 3%);
+  padding: 2rem 0rem; //4rem 0rem;
 
   grid-column: full-start / full-end;
   z-index: 10;
+  color: $color-almost-black;
+  color: white;
+  font-weight: 500;
 
   // whole
   &__container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 8rem 6rem;
+    padding: 4rem 6rem;
 
     @media only screen and (max-width: $bp-large) {
       padding: 8rem 2rem;
@@ -30,43 +34,49 @@
     width: 100%;
   }
 
+  &__heading {
+    text-align: center;
+    font-size: 4.8rem;
+    margin-bottom: 2rem;
+    font-weight: 600;
+    text-shadow: 2px 2px 8px $color-almost-black;
+    position: relative;
+    padding: 0;
+    display: inline-block;
+
+    // could just give this part those header boxes style that i'll eventually create that looks like: <=====>
+
+    // &::after {
+    //   content: "";
+    //   background-color: lighten(#434751, 2%);
+    //   bottom: 0;
+    //   left: 0;
+    //   height: 8px;
+    //   width: 100rem;
+    //   border-radius: 2px;
+    //   transform: translate(20%, 0%);
+    //   position: absolute;
+    //   z-index: -1;
+    // }
+  }
+
   // text / left side
   &__text {
-    align-items: flex-start;
-    margin-left: 10rem;
+    align-items: center;
+    // margin-left: 10rem;
     margin-right: 0;
+
     @media only screen and (max-width: $bp-medium) {
       margin-left: 0;
     }
 
-    & .heading--2 {
-      position: relative;
-      margin-right: 16rem;
-      margin-top: -1rem;
-
-      &::after {
-        @include style-after-element(
-          19rem,
-          3rem,
-          darken($color-background-2, 7%),
-          darken($color-background-2, 10%)
-        );
-
-        @media only screen and (max-width: $bp-largest) {
-          @include style-after-element(
-            22rem,
-            3rem,
-            darken($color-background-2, 7%),
-            darken($color-background-2, 10%)
-          );
-        }
-      }
-    }
-
-    & > p {
+    &>p {
       margin-top: 2rem;
-      width: 75%;
-      font-size: 1.7rem;
+      width: 80%;
+      font-size: 2.4rem;
+      font-weight: 300;
+
+      text-align: center;
 
       @media only screen and (max-width: $bp-largest) {
         font-size: 2rem;
@@ -81,84 +91,58 @@
       box-shadow: inset 0 -10px 0 white;
       transition: all 0.4s;
 
+      & a {
+        text-decoration: none;
+        color: $color-almost-black;
+      }
+
       &:hover {
         box-shadow: inset 0 -20px 0 white;
       }
     }
   }
 
-  //icons list
+  // icons list
   &__list {
-    display: flex;
     list-style: none;
-    margin-top: 3rem;
+    margin-top: 4rem;
+    background-color: white;
+    border-radius: 100px;
+    padding: 1.5rem 3rem;
+    margin-bottom: 2rem;
 
-    & > li {
-      margin-right: 4rem;
-    }
-    &--icon {
-      width: 3.5rem;
-      height: 3.5rem;
-      transition: all 0.4s;
+    &__links {
+      &--icon {
+        width: 3.6rem;
+        height: 3.6rem;
+        fill: lighten(#434751, 2%);
+        transition: 0.3s;
+        margin: 0rem 2rem;
 
-      &:hover {
-        transform: translateY(-2px);
-      }
-    }
-  }
-
-  // contact form / right side
-  &__form {
-    margin-right: 10rem;
-
-    @media only screen and (max-width: $bp-medium) {
-      margin-top: 6rem;
-    }
-    &--input {
-      padding: 1.5rem;
-      font-size: $default-font-size;
-      font-family: "Inter", sans-serif;
-      font-weight: 300;
-      border-radius: 5px;
-      border: 1px solid gray;
-      width: 100%;
-
-      @media only screen and (max-width: $bp-largest) {
-        font-size: 1.8rem;
+        &:hover {
+          fill: #7e75ff;
+        }
       }
     }
 
-    textarea {
-      height: 15rem;
+    & a {
+      text-decoration: none;
     }
 
-    &--label {
-      visibility: hidden;
-    }
+    &--item {
+      text-transform: lowercase;
 
-    &--submit {
-      padding: 1rem 2rem;
-      display: block;
-      font-size: $default-font-size;
-      font-family: "Inter", sans-serif;
-      font-weight: 300;
-      border-radius: 5px;
-      margin-top: 2rem;
-      color: darken(lightgray, 40%);
-      background-color: white;
-      border: 1px solid gray;
-      cursor: pointer;
-      transition: all 0.4s;
-
-      @media only screen and (max-width: $bp-largest) {
-        font-size: 1.8rem;
+      &:not(:last-child) {
+        margin-right: 3.2rem;
       }
 
-      &:hover {
-        background-color: whitesmoke;
-        color: black;
-        border: 1px solid black;
-        transform: scale(1.025);
+      & p {
+        color: lighten(#434751, 5%);
+        transition: 0.3s;
+
+        &:hover {
+          color: #7e75ff;
+        }
       }
     }
   }
