--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  background-color: $color-almost-black;
+  background-color: whitesmoke;
   grid-column: full-start / full-end;
-  padding: 1.5rem 0;
+  padding: 2.5rem 0;
   border-top: 1px solid whitesmoke;
 }
