--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -32,9 +32,9 @@ body {
 .heading--4 {
   font-size: 1.8rem;
   font-weight: 300;
-  color: $color-light-gray;
+  color: $color-almost-black;
   text-align: center;
-  text-shadow: 1px 1px 16px gray;
+  //text-shadow: 1px 1px 16px gray;
 }
 
 .heading--5 {
