--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -10,6 +10,10 @@ body {
   font-weight: 400;
   text-shadow: 2px 2px 6px gray;
   color: $color-default-text;
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 6.5rem;
+  }
 }
 
 .heading--2 {
