--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,43 @@ body {
 .u-margin-bottom-large {
   margin-bottom: 10rem; }
 
+.heading-block {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  background-color: #d8e9f3;
+  height: 6rem;
+  position: relative;
+  border-left: 0.5rem solid #484c57; }
+  @media only screen and (max-width: 37.5em) {
+    .heading-block {
+      height: 5rem; } }
+  .heading-block--2 {
+    background-color: #c6c2ff; }
+  .heading-block > h2 {
+    color: #484c57; }
+
+.heading-block::after {
+  content: "";
+  z-index: 200;
+  left: 100%;
+  top: 0;
+  height: 0;
+  width: 0;
+  position: absolute;
+  background-color: transparent;
+  border-top: 0rem solid transparent;
+  border-bottom: 6rem solid transparent;
+  border-left: 2rem solid #d8e9f3; }
+  @media only screen and (max-width: 37.5em) {
+    .heading-block::after {
+      border-bottom: 5rem solid transparent; } }
+
+.heading-block--2::after {
+  border-left: 2rem solid #c6c2ff; }
+
 .navigation {
   grid-row: -1 / -1;
   opacity: 0;
@@ -255,10 +292,10 @@ body {
   font-weight: 700;
   height: 7rem;
   width: 100%;
-  padding: 2rem 6rem;
+  padding: 2rem 4rem;
   position: fixed;
   top: 0;
-  z-index: 3000;
+  z-index: 300000;
   opacity: 1; }
   @media only screen and (max-width: 50em) {
     .new_navbar {
@@ -278,7 +315,7 @@ body {
       .new_navbar__list__links--icon {
         width: 2.2rem;
         height: 2.6rem;
-        fill: #484c57;
+        fill: #4f535f;
         transition: 0.3s;
         margin-left: 2rem; }
         .new_navbar__list__links--icon:hover {
@@ -372,29 +409,6 @@ body {
   .about .heading--2 {
     position: relative;
     display: inline-block; }
-    .about .heading--2::after {
-      content: "";
-      bottom: 0;
-      left: -2px;
-      width: 16rem;
-      height: 3rem;
-      position: absolute;
-      background-color: #e0eaf1;
-      box-shadow: 0px 0px 10px #c1d5e2;
-      border-radius: 3px;
-      z-index: -1; }
-      @media only screen and (max-width: 75em) {
-        .about .heading--2::after {
-          content: "";
-          bottom: 0;
-          left: -2px;
-          width: 18.5rem;
-          height: 3rem;
-          position: absolute;
-          background-color: #e0eaf1;
-          box-shadow: 0px 0px 10px #c1d5e2;
-          border-radius: 3px;
-          z-index: -1; } }
   .about .about-container {
     display: flex;
     align-items: flex-start;
@@ -513,10 +527,6 @@ body {
   @media only screen and (max-width: 37.5em) {
     .skills {
       padding: 4rem 0; } }
-  .skills .heading--2 {
-    position: relative;
-    display: inline-block;
-    box-shadow: inset 0 -2.5rem 0 white; }
   .skills__whole {
     display: flex;
     flex-direction: column;
@@ -635,7 +645,7 @@ body {
       align-items: flex-start;
       justify-content: center;
       margin-right: 0.75rem;
-      box-shadow: -10px -10px 0 #968fff; }
+      box-shadow: -10px -10px 0 #aea8ff; }
       @media only screen and (max-width: 62.5em) {
         .projects-container__info {
           padding: 1rem 2rem; } }
@@ -698,17 +708,17 @@ body {
               .projects-container__info--skills-item:not(:last-child) {
                 margin-right: 1rem; } }
       .projects-container__info:nth-child(2n) {
-        box-shadow: 10px -10px 0 #d8e9f3;
+        box-shadow: 10px -10px 0 #bddaeb;
         margin-left: 0.75rem; }
       @media only screen and (max-width: 62.5em) {
         .projects-container__info:nth-child(2n) {
-          box-shadow: 0px 8px 0 #d8e9f3; } }
+          box-shadow: 0px 8px 0 #bddaeb; } }
       @media only screen and (max-width: 28.125em) {
         .projects-container__info:nth-child(2n) {
           box-shadow: none; } }
       @media only screen and (max-width: 62.5em) {
         .projects-container__info {
-          box-shadow: 0px 8px 0 #968fff; } }
+          box-shadow: 0px 8px 0 #aea8ff; } }
       @media only screen and (max-width: 28.125em) {
         .projects-container__info {
           box-shadow: none; } }
@@ -727,7 +737,7 @@ body {
           padding: 0.5rem 1rem;
           list-style: none;
           cursor: pointer;
-          box-shadow: 5px 5px 0 #968fff;
+          box-shadow: 5px 5px 0 #aea8ff;
           position: relative;
           top: 0;
           left: 0;
@@ -744,23 +754,23 @@ body {
               padding: 1rem 1.5rem;
               font-size: 2rem;
               margin-top: 1rem;
-              box-shadow: 5px 5px 0 #968fff; } }
+              box-shadow: 5px 5px 0 #aea8ff; } }
           .projects-container__info--links-link-btn:hover {
             transform: translate(5px, 5px);
-            background-color: #bcb7ff;
-            box-shadow: 0px 0px 0 #968fff; }
+            background-color: #d4d1ff;
+            box-shadow: 0px 0px 0 #aea8ff; }
           .projects-container__info--links-link-btn:active {
             transform: translate(5px, 8px); }
         .projects-container__info--links-link-btn-even {
-          box-shadow: -5px 5px 0 #d8e9f3; }
+          box-shadow: -5px 5px 0 #96c4df; }
           .projects-container__info--links-link-btn-even:hover {
             transform: translate(-5px, 5px);
-            box-shadow: 0px 0px 0 #d8e9f3;
-            background-color: #ecf4f9; }
+            box-shadow: 0px 0px 0 #bddaeb;
+            background-color: #d0e5f1; }
             @media only screen and (max-width: 62.5em) {
               .projects-container__info--links-link-btn-even:hover {
                 transform: translate(5px, 5px);
-                background-color: #d8e9f3; } }
+                background-color: #d0e5f1; } }
           .projects-container__info--links-link-btn-even:active {
             transform: translate(-5px, 8px); }
             @media only screen and (max-width: 62.5em) {
@@ -768,47 +778,10 @@ body {
                 transform: translate(5px, 8px); } }
           @media only screen and (max-width: 62.5em) {
             .projects-container__info--links-link-btn-even {
-              box-shadow: 5px 5px 0 #d0e5f1; } }
-  .projects .heading--2 {
-    position: relative; }
-    .projects .heading--2::after {
-      content: "";
-      bottom: 0;
-      left: -2px;
-      width: 40rem;
-      height: 3rem;
-      position: absolute;
-      background-color: #e0eaf1;
-      box-shadow: 0px 0px 10px #c1d5e2;
-      border-radius: 3px;
-      z-index: -1; }
-      @media only screen and (max-width: 75em) {
-        .projects .heading--2::after {
-          content: "";
-          bottom: 0;
-          left: -2px;
-          width: 43rem;
-          height: 3rem;
-          position: absolute;
-          background-color: #e0eaf1;
-          box-shadow: 0px 0px 10px #c1d5e2;
-          border-radius: 3px;
-          z-index: -1; } }
-      @media only screen and (max-width: 62.5em) {
-        .projects .heading--2::after {
-          content: "";
-          bottom: 0;
-          left: -2px;
-          width: 46rem;
-          height: 3rem;
-          position: absolute;
-          background-color: #e0eaf1;
-          box-shadow: 0px 0px 10px #c1d5e2;
-          border-radius: 3px;
-          z-index: -1; } }
+              box-shadow: 5px 5px 0 #b5d5e8; } }
 
 .contact {
-  background: #887fff;
+  background: #9f99ff;
   padding: 2rem 0rem;
   grid-column: full-start / full-end;
   z-index: 10;
@@ -877,7 +850,7 @@ body {
     .contact__list__links--icon {
       width: 3.6rem;
       height: 3.6rem;
-      fill: #484c57;
+      fill: #4f535f;
       transition: 0.3s;
       margin: 0rem 2rem; }
       .contact__list__links--icon:hover {
