--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -7,10 +7,10 @@
   font-weight: 700;
   height: 7rem;
   width: 100%;
-  padding: 2rem 6rem;
+  padding: 2rem 4rem;
   position: fixed;
   top: 0;
-  z-index: 3000;
+  z-index: 300000;
   opacity: 1;
 
   @media only screen and (max-width: $bp-medium) {
@@ -19,7 +19,7 @@
   }
 
   &--home_name {
-    color: #7e75ff;
+    color: $color-purple;
     font-size: 2.4rem;
     width: 100%;
   }
@@ -36,12 +36,12 @@
       &--icon {
         width: 2.2rem;
         height: 2.6rem;
-        fill: lighten(#434751, 2%);
+        fill: lighten(#434751, 5%);
         transition: 0.3s;
         margin-left: 2rem;
 
         &:hover {
-          fill: #7e75ff;
+          fill: $color-purple;
         }
       }
     }
