--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -179,16 +179,16 @@
       }
 
       &:nth-child(2n) {
-        box-shadow: 10px -10px 0 $color-light-blue;
+        box-shadow: 10px -10px 0 $color-darkened-blue;
         margin-left: 0.75rem;
       }
 
       margin-right: 0.75rem;
-      box-shadow: -10px -10px 0 $color-purple-light;
+      box-shadow: -10px -10px 0 $color-light-purple;
 
       &:nth-child(2n) {
         @media only screen and (max-width: $bp-large) {
-          box-shadow: 0px 8px 0 $color-light-blue;
+          box-shadow: 0px 8px 0 $color-darkened-blue;
         }
 
         @media only screen and (max-width: $bp-smallest) {
@@ -197,7 +197,7 @@
       }
 
       @media only screen and (max-width: $bp-large) {
-        box-shadow: 0px 8px 0 $color-purple-light;
+        box-shadow: 0px 8px 0 $color-light-purple;
       }
 
       @media only screen and (max-width: $bp-smallest) {
@@ -220,7 +220,7 @@
           padding: 0.5rem 1rem;
           list-style: none;
           cursor: pointer;
-          box-shadow: 5px 5px 0 $color-purple-light;
+          box-shadow: 5px 5px 0 $color-light-purple;
           position: relative;
           top: 0;
           left: 0;
@@ -240,13 +240,13 @@
             padding: 1rem 1.5rem;
             font-size: 2rem;
             margin-top: 1rem;
-            box-shadow: 5px 5px 0 $color-purple-light;
+            box-shadow: 5px 5px 0 $color-light-purple;
           }
 
           &:hover {
             transform: translate(5px, 5px);
-            background-color: lighten($color-purple-light, 8%);
-            box-shadow: 0px 0px 0 $color-purple-light;
+            background-color: lighten($color-light-purple, 8%);
+            box-shadow: 0px 0px 0 $color-light-purple;
           }
 
           &:active {
@@ -255,16 +255,16 @@
         }
 
         &-link-btn-even {
-          box-shadow: -5px 5px 0 $color-light-blue;
+          box-shadow: -5px 5px 0 darken($color-darkened-blue, 10%);
 
           &:hover {
             transform: translate(-5px, 5px);
-            box-shadow: 0px 0px 0 $color-light-blue;
-            background-color: lighten($color-light-blue, 5%);
+            box-shadow: 0px 0px 0 $color-darkened-blue;
+            background-color: lighten($color-darkened-blue, 5%);
 
             @media only screen and (max-width: $bp-large) {
               transform: translate(5px, 5px);
-              background-color: $color-light-blue;
+              background-color: lighten($color-darkened-blue, 5%);
             }
           }
 
@@ -277,7 +277,7 @@
           }
 
           @media only screen and (max-width: $bp-large) {
-            box-shadow: 5px 5px 0 darken(rgb(216, 233, 243), 2%);
+            box-shadow: 5px 5px 0 darken($color-darkened-blue, 2%);
           }
         }
       }
@@ -285,27 +285,27 @@
   }
 
   & .heading--2 {
-    position: relative;
+    // position: relative;
 
-    &::after {
-      @include style-after-element(40rem,
-        3rem,
-        darken($color-background-2, 7%),
-        darken($color-background-2, 10%));
+    // &::after {
+    //   @include style-after-element(40rem,
+    //     3rem,
+    //     darken($color-background-2, 7%),
+    //     darken($color-background-2, 10%));
 
-      @media only screen and (max-width: $bp-largest) {
-        @include style-after-element(43rem,
-          3rem,
-          darken($color-background-2, 7%),
-          darken($color-background-2, 10%));
-      }
+    //   @media only screen and (max-width: $bp-largest) {
+    //     @include style-after-element(43rem,
+    //       3rem,
+    //       darken($color-background-2, 7%),
+    //       darken($color-background-2, 10%));
+    //   }
 
-      @media only screen and (max-width: $bp-large) {
-        @include style-after-element(46rem,
-          3rem,
-          darken($color-background-2, 7%),
-          darken($color-background-2, 10%));
-      }
-    }
+    //   @media only screen and (max-width: $bp-large) {
+    //     @include style-after-element(46rem,
+    //       3rem,
+    //       darken($color-background-2, 7%),
+    //       darken($color-background-2, 10%));
+    //   }
+    // }
   }
 }
