--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -20,9 +20,9 @@
   }
 
   & .heading--2 {
-    position: relative;
-    display: inline-block;
-    box-shadow: inset 0 -2.5rem 0 white;
+    // position: relative;
+    // display: inline-block;
+    // box-shadow: inset 0 -2.5rem 0 white;
   }
 
   &__whole {
