--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "utilities";
 
 //page layout/sections
+@import "heading_block";
 @import "navigation";
 @import "navbar";
 @import "header";
