--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "navbar";
 @import "header";
 @import "about";
+@import "experience";
 @import "skills";
 @import "projects";
 @import "contact";
