--- a/sass/_experience.scss
+++ b/sass/_experience.scss
@@ -1,19 +1,53 @@
 .experience {
-  background-color: pink;
-  grid-column: content-start / content-end;
-  padding: 8rem 2rem;
+  background-color: rgba(216, 233, 243, 0.6);
+  grid-column: full-start / full-end;
+  padding: 8rem 17rem;
+  padding-bottom: 0rem;
+  display: flex;
+  flex-direction: column;
+
+  // text-align: center;
+  & .heading-block {
+    color: green;
+    // align-self: center;
+    align-self: flex-start;
+
+    @media only screen and (max-width: $bp-large) {
+      align-self: center;
+    }
+  }
+
+  @media only screen and (max-width: $bp-largest) {
+    padding: 8rem 6rem;
+    font-size: 2rem;
+  }
+
+  @media only screen and (max-width: $bp-large) {
+    padding: 8rem 4rem;
+    font-size: 2rem;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    // text-align: center;
+    padding: 8rem 1rem;
+    font-size: 2rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 4rem 1rem;
+    font-size: 2rem;
+  }
 
   &-container {
-    // background-color: green;
-    background-color: purple;
-    padding: 1rem;
-    margin-top: 1rem;
+    margin-top: 2.5rem;
   }
 
   &-work {
-    background-color: cyan;
-    padding: 2rem 1rem;
+    background-color: whitesmoke;
+    border-radius: 5px;
+    padding: 2rem;
     display: flex;
+    // align-items: center;
 
     // only apply between work experience
     &:not(:last-child) {
@@ -21,28 +55,52 @@
     }
 
     &__img {
-      // probably better to just make height/width fixed, then adjust w/ media queries
-      width: 15%;
-      height: 15rem;
-      background-color: green;
+      width: 15.2rem;
+      height: 15.21rem;
+      // border: 1px solid lighten(gray, 30%);
+      border: 1px solid lighten($color-purple, 12.5%);
+      border-radius: 15px;
+      align-self: start;
+      & > img {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 15rem;
+        height: 15rem;
+        border-radius: 15px;
+      }
     }
 
     &__content {
-      background-color: whitesmoke;
-      padding: 1rem;
-      width: 90%; // change to fixed length after img is set to fixed length, or just set this to a lower width on smaller screen sizes and make the image width a bit larger on smaller
+      padding-left: 2rem;
+      width: 90%;
       margin-left: 1rem;
 
       &--company {
         color: $color-default-text;
+
+        & span {
+          color: darken($color-purple, 2%);
+        }
+      }
+
+      &--date {
+        color: lighten($color-default-text, 10%);
+        margin-top: 0.25rem;
       }
 
       &--points {
-        margin-top: 1rem;
+        margin-top: 2rem;
         color: $color-almost-black;
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
+        text-indent: -1.15em;
+        padding-left: 1em;
+
+        & span {
+          color: darken($color-purple, 10%);
+        }
       }
     }
   }
