--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -7,7 +7,7 @@
   padding: 8rem 12rem;
   z-index: -2;
 
-  @media only screen and (max-width: $bp-medium) {
+  @media only screen and (max-width: $bp-large) {
     padding: 8rem 12rem;
   }
 
