--- a/sass/_experience.scss
+++ b/sass/_experience.scss
@@ -19,17 +19,20 @@
 
   @media only screen and (max-width: $bp-largest) {
     padding: 8rem 6rem;
+    padding-bottom: 0rem;
     font-size: 2rem;
   }
 
   @media only screen and (max-width: $bp-large) {
     padding: 8rem 4rem;
+    padding-bottom: 0rem;
     font-size: 2rem;
   }
 
   @media only screen and (max-width: $bp-medium) {
     // text-align: center;
     padding: 8rem 1rem;
+    padding-bottom: 0rem;
     font-size: 2rem;
   }
 
@@ -45,7 +48,7 @@
   &-work {
     background-color: whitesmoke;
     border-radius: 5px;
-    padding: 2rem;
+    padding: 4rem 2rem;
     display: flex;
     // align-items: center;
 
@@ -97,6 +100,11 @@
         gap: 1.5rem;
         text-indent: -1.15em;
         padding-left: 1em;
+        font-size: 1.7rem;
+
+        @media only screen and (max-width: $bp-largest) {
+          font-size: 2rem;
+        }
 
         & span {
           color: darken($color-purple, 10%);
